tests/test_struct/bad/output/nested2.catala_en.A.Interpret
[ERROR] Cyclic dependency detected between types!

Cycle type S, declared:
 --> tests/test_struct/bad/nested2.catala_en
  | 
4 | declaration structure S:
  |                       ^
  + Article

Used here in the definition of another cycle type E:
  --> tests/test_struct/bad/nested2.catala_en
   | 
10 |   -- Case2 content S
   |                    ^
   + Article

Cycle type E, declared:
 --> tests/test_struct/bad/nested2.catala_en
  | 
8 | declaration enumeration E:
  |                         ^
  + Article

Used here in the definition of another cycle type S:
 --> tests/test_struct/bad/nested2.catala_en
  | 
5 |   data x content E
  |                  ^
  + Article
